# MinimizerProject

./: .gitignore  CMakeLists.txt  README.md  compat_matrix.cpp  compat_matrix.h  driven_fsm_minimizer.cpp  driven_fsm_minimizer.h  fsms.cpp  fsms.h  machine_builders.cpp  machine_builders.h  main.cpp  observation_machine_builder.cpp  observation_machine_builder.h  run_benchmark.cpp  run_benchmark_KN.cpp  run_script.sh
benchmarks/: benchmark0.txt  benchmark1.txt  benchmark10.txt  benchmark100.txt  benchmark101.txt  benchmark102.txt  benchmark103.txt  benchmark104.txt  benchmark105.txt  benchmark106.txt  benchmark107.txt  benchmark108.txt  benchmark109.txt  benchmark11.txt  benchmark110.txt  benchmark111.txt  benchmark112.txt  benchmark113.txt  benchmark114.txt  benchmark115.txt  benchmark116.txt  benchmark117.txt  benchmark118.txt  benchmark119.txt  benchmark12.txt  benchmark120.txt  benchmark121.txt  benchmark122.txt  benchmark123.txt  benchmark124.txt  benchmark125.txt  benchmark126.txt  benchmark127.txt  benchmark128.txt  benchmark129.txt  benchmark13.txt  benchmark130.txt  benchmark131.txt  benchmark132.txt  benchmark133.txt  (+209 more)
benchmarks/results/: cascade0result.txt  cascade100result.txt  cascade101result.txt  cascade102result.txt  cascade103result.txt  cascade104result.txt  cascade105result.txt  cascade106result.txt  cascade107result.txt  cascade108result.txt  cascade109result.txt  cascade10result.txt  cascade110result.txt  cascade111result.txt  cascade112result.txt  cascade113result.txt  cascade114result.txt  cascade115result.txt  (+367 more)
benchmarks_old/: cascade100.txt  cascade108.txt  cascade13.txt  cascade175.txt  cascade188.txt  cascade205.txt  cascade234.txt  cascade30.txt  cascade323.txt  cascade370.txt  cascade42.txt  cascade76.txt
experiments/: experiment.cpp  experiment.h  experiment_backup.cpp
machines/: builders.cpp  builders.h  machines.cpp  machines.h  serializer.cpp  serializer.h
minimizers/: cnf_builders.cpp  cnf_builders.h  compat_matrix.cpp  compat_matrix.h  driven_fsm_minimizer.cpp  driven_fsm_minimizer.h  hopcroft.cpp  hopcroft.h  monotone_range_searchers.h  ofa_minimizer.cpp  ofa_minimizer.h
results/: log0.txt  log1.txt  log10.txt  log100.txt  log101.txt  log102.txt  log103.txt  log104.txt  log105.txt  log106.txt  log107.txt  log108.txt  log109.txt  log11.txt  log110.txt  log111.txt  log112.txt  log113.txt  log114.txt  log115.txt  log116.txt  log117.txt  log118.txt  log119.txt  log12.txt  log120.txt  log121.txt  log122.txt  log123.txt  log124.txt  log125.txt  log126.txt  log127.txt  log128.txt  log129.txt  log13.txt  log130.txt  log131.txt  log132.txt  log133.txt  (+200 more)
results_KN/: log0.txt  log1.txt  log10.txt  log100.txt  log101.txt  log102.txt  log103.txt  log104.txt  log105.txt  log106.txt  log107.txt  log108.txt  log109.txt  log11.txt  log110.txt  log111.txt  log112.txt  log113.txt  log114.txt  log115.txt  log116.txt  log117.txt  log118.txt  log119.txt  log12.txt  log120.txt  log121.txt  log122.txt  log123.txt  log124.txt  log125.txt  log126.txt  log127.txt  log128.txt  log129.txt  log13.txt  log130.txt  log131.txt  log132.txt  log133.txt  (+148 more)
test/: experiment.cpp  experiment.h
utils/: clock.h
(+17 files in other folders)
